Bug 368556 - parsing order is sometimes wrong
Summary: parsing order is sometimes wrong
Status: RESOLVED FIXED
Alias: None
Product: kdev-python
Classification: Developer tools
Component: Language support (other bugs)
Version First Reported In: git master
Platform: Other Linux
: NOR normal
Target Milestone: 1.7.3
Assignee: Sven Brauch
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-09-10 14:56 UTC by Sven Brauch
Modified: 2016-09-11 19:41 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sven Brauch 2016-09-10 14:56:13 UTC
Sometimes parsing order is wrong, and files are not updated in the right sequence. This needs to be investigated. A complex example is below, but I have also seen similar issues in simpler cases.

from django.template import RequestContext
from django.shortcuts import render_to_response
from django.contrib.auth import (authenticate, login, logout)

from storageadmin.models import (Appliance, Setup, UpdateSubscription)
from django.shortcuts import redirect
from django.contrib import messages
from django.conf import settings
from rest_framework.renderers import JSONRenderer


def login_page(request):
    return render_to_response('login.html',
                              context_instance=RequestContext(request))
Comment 1 Sven Brauch 2016-09-11 19:40:56 UTC
Git commit 4eb9fc0ef094b03a400200543cee91b5052fe0ce by Sven Brauch.
Committed on 11/09/2016 at 19:32.
Pushed by brauch into branch '5.0'.

fix dependency scheduling logic

It is not correct to check for the priority of the parse job; that
only exists if the job for that document was already started, which is
usually not the case. Instead, use the API to get the priority of the
document from the job queue.

M  +3    -8    duchain/helpers.cpp

http://commits.kde.org/kdev-python/4eb9fc0ef094b03a400200543cee91b5052fe0ce
Comment 2 Sven Brauch 2016-09-11 19:41:37 UTC
This should hopefully fix it, if you see it again in 5.0.1 (to be released next week-ish), please let me know. Thanks.