fix dependency scheduling logic

It is not correct to check for the priority of the parse job; that
only exists if the job for that document was already started, which is
usually not the case. Instead, use the API to get the priority of the
document from the job queue.

BUG:368556